data/all_generated_tests/raw_wast_tests/if_TypeMismatchinControlFlowInstructions_1932.wast
;; 3. **Test for Missing Type in Blocktype**: Design a WebAssembly module where the `if` instruction’s `blocktype` is intended to return a value but fails to include this type explicitly. Observe how each engine manages the implicit type versus explicit type requirement.

(assert_invalid
  (module (func $missing-type-in-blocktype
    (if ;; missing explicit blocktype
      (i32.const 1)
      (then (i32.const 42))
      (else (i32.const 0))
    )
  ))
  "type mismatch"
)